Issue #37: New build.xml file and new package structure.